changes necessary to make validate-policy work again